# model-deployment

./: .gitignore  Notebook.ipynb  README.md  config.yaml  pyproject.toml  test-endpoints.sh  tls.crt  tls.key  webhook-server-tls.crt  webhook-server-tls.key
apps/: pipeline.py  pipeline.yaml  requirements.txt  upload.py
apps/components/: collect_data.py  preprocess_data.py  train_model.py
deployment/: README.md
deployment/config/: kind-cluster.yaml
deployment/manifests/: application-crd.yaml  argo-workflows-complete-crds.yaml  ingress-config.yaml  kserve-config.yaml  kserve-rbac.yaml  minio-standalone.yaml  minio.yaml  mlflow-server.yaml  mlflow.yaml  mysql-fix.yaml  namespaces.yaml  port-forward-services.yaml  resource-patches.yaml  storage-class.yaml  viewer-crd.yaml  workflow-controller-unified-config.yaml
deployment/scripts/: cleanup.sh  kind-cluster-setup.sh  setup.sh
infras/: README.md
infras/environments/local/: central-dashboard-nginx-proxy.yaml  centraldashboard-patch.yaml  kubeflow-rbac-fix.yaml  local-development-fixes.yaml  local-resource-patches.yaml  mlflow-config.yaml  namespace-rbac-fix.yaml  storage-local.yaml
infras/environments/production/: kustomization.yaml  resource-limits-production.yaml
infras/environments/staging/: ingress-staging.yaml  kustomization.yaml  mlflow-config.yaml  (+2 more)
infras/scripts/: cleanup.sh  kind-cluster-setup.sh  kubeflow-setup.sh
kubeflow/: Dockerfile  pipeline.yaml  upload.py
kubeflow/components/: deploy_model.py  evaluate_model.py
tests/: test-rbac-permissions.sh  validate-rbac-config.sh
(+3 files in other folders)
